kubernetes/kubernetes-dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-dashboard-ingress
  annotations:
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer:  letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
#    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
#    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
    nginx.org/ssl-services: kubernetes-dashboard
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: kube.nathanrahm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
  tls:
    - hosts:
        - kube.nathanrahm.com
      secretName: kubernetes-dashboard-tls
